--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "i18next": "^23.10.1",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.1.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
