--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "i18next": "^23.10.1",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.379.0",
     "next": "14.1.3",
     "next-client-cookies": "^1.1.1",
     "react": "^18",
@@ -26,6 +30,7 @@
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
